# Trading_Bot

./: .env  .gitignore  .pre-commit-config.yaml  A_SHARE_SETUP_SUMMARY.md  CHANGELOG.md  COMPLETION_SUMMARY.md  COMPLETION_SUMMARY_CONTEXT7.md  COMPLIANCE_SUMMARY.md  COMPREHENSIVE_PROJECT_INVENTORY.txt  CONTRIBUTING.md  Coinbase_Trading_Api.json  Future_instruction.txt  IMPLEMENTATION_COMPLETE.md  Instruction.txt  MODERNIZATION_COMPLETE.md  Makefile  Makefile.models  NVDA_DEMO_DATA.csv  Old_Decration.txt  PROJECT_MANAGEMENT_PLAN.md  PROJECT_STATUS_SUMMARY.md  Pull_Data.py  README.md  RUNBOOK.md  TRANSITION_STATUS_REPORT.md  aiokafka.py  binance_live_test_and_trade.py  coinbase_api.json  coinbase_trading_bot.py  conftest.py  dashboard_summary.md  debug_charts.py  debug_dashboard.py  docker-compose.ci.yml  docker-compose.yml  enhanced_dashboard.py  env.example  final_dashboard_test.py  final_system_validation.py  iv_surface.service  (+62 more)
accounting/: fee_engine.py  fifo_ledger.py  tax_reporting.py  worm_archive.py
analysis/: ab_eval.py  alpha_attribution.py  ev_calibration.py  ev_forecaster.py  ev_microwindow.py  exp_cuped.py  exp_sequential_test.py  slip_forecaster.py  slip_pareto.py
api/: ab_history.py  compliance_api.py  dashboard_server.py  pnl_api.py  promql_proxy.py  slack_panic_webhook.py
archive/: README.md
artifacts/: M11_ALPHA_UPLIFT_SUMMARY.md  kill_switch_active  pnl_snapshot_20250816_104855.json  pnl_snapshot_20250816_104901.json  pnl_snapshot_20250816_104906.json  pnl_snapshot_20250816_104911.json  pnl_snapshot_20250816_104917.json  slo_history.db  (+11 more)
(+8972 files in other folders)
