[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-layer-trading-system"
version = "0.9.0rc1"
description = "Advanced multi-layer algorithmic trading system"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
ml = ["xgboost"]
onnx = ["onnxruntime"]
bandits = ["contextualbandits"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
